--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,23 @@ nav {
     animation: fadeIn 1s ease-out;
 }
 
+.profile-buttons {
+    display: flex;
+    gap: 15px;
+}
+
+.profile-buttons .btn img {
+    width: 32px;
+    height: 32px;
+    transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
+    filter: brightness(0.8);
+}
+
+.profile-buttons .btn img:hover {
+    transform: scale(1.2);
+    filter: brightness(1);
+}
+
 .logo a {
     text-decoration: none;
     color: inherit;
@@ -39,13 +56,16 @@ nav {
 }
 
 nav ul {
+   list-style: none;
     display: flex;
-    list-style: none;
+    align-items: center;
+    gap: 15px;
 }
 
 nav ul li {
     margin-left: 20px;
     transition: transform 0.3s ease;
+     display: inline-block;
 }
 
 nav ul li:hover {
@@ -55,7 +75,13 @@ nav ul li:hover {
 nav ul li a {
     color: white;
     text-decoration: none;
+    font-weight: bold;
+    padding: 8px 15px;
     transition: color 0.3s ease;
+}
+
+nav ul li a:hover {
+    color: #ffcc00;
 }
 
 header {
@@ -104,6 +130,8 @@ header .btn:hover {
     text-align: center;
     animation: fadeInUp 1s ease-out;
 }
+
+
 
 #skills {
     padding: 50px 20px;
